<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Secure Chat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="name_label">Name</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="title_activity_initial_page">InitialPage</string>
    <string name="login_button_label">Login</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="register_button_label">Register</string>
    <string name="title_activity_register">Register</string>
    <string name="action_add">Add</string>
    <string name="new_chat_dialog_title">New Chat</string>
    <string name="new_chat_dialog_text">Enter the username of the person you would like to chat with</string>
    <string name="new_chat_ok">OK</string>
    <string name="new_chat_cancel">Cancel</string>
    <string name="title_activity_chat">Chat</string>
    <string name="send">Send</string>
    <string name="type_message">Type message</string>
    <string name="title_activity_test">Test</string>

</resources>
