<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.andrewovens.securechat.Register" >

    <TextView
        android:id="@+id/register_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:text="@string/name_label" />

    <EditText
        android:id="@+id/register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_name_label"
        android:inputType="text"
        android:ems="10" 
        android:hint="@string/name_label" >
        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/register_username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_name"
        android:layout_centerHorizontal="true"
        android:text="@string/username_label" />

    <EditText
        android:id="@+id/register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_username_label"
        android:inputType="text"
        android:ems="10" 
        android:hint="@string/username_label" >
    </EditText>

    <TextView
        android:id="@+id/register_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_username"
        android:layout_centerHorizontal="true"
        android:text="@string/password_label" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_password_label"
        android:inputType="textPassword"
        android:ems="10" 
        android:hint="@string/password_label" >
    </EditText>
    
    <TextView
        android:id="@+id/register_confirm_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_password"
        android:layout_centerHorizontal="true"
        android:text="@string/confirm_password_label" />

    <EditText
        android:id="@+id/register_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_confirm_password_label"
        android:inputType="textPassword"
        android:ems="10" 
        android:hint="@string/confirm_password_label" >
    </EditText>
    
    <Button
        android:id="@+id/register_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/register_confirm_password"
        android:text="@string/login_button_label"
        android:onClick="registerClick" />
    
    <Button
        android:id="@+id/register_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/register_register"
        android:text="@string/cancel_button_label"
        android:onClick="cancelClick" />
    
</RelativeLayout>
